fixed some alignment issue

--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ article .icon {
 }
 
 .project-title {
-  margin: 1rem;
+  margin:0rem;
   color: black;
 }
 
